@@ -1494,10 +1494,9 @@ class IPRange(BaseIP, IPListMixin):
             if isinstance(other, IPNetwork):
                 shiftwidth = other._module.width - other._prefixlen
                 other_start = (other._value >> shiftwidth) << shiftwidth
-                # Start of the next network after other
-                other_next_start = other_start + (1 << shiftwidth)
+                other_end = other_start + (1 << shiftwidth) - 1
 
-                return self._start._value <= other_start and self._end._value > other_next_start
+                return self._start._value <= other_start and self._end._value >= other_end
 
         # Whatever it is, try to interpret it as IPAddress.
         return IPAddress(other) in self
