@@ -208,6 +208,10 @@ def test_iprange_membership():
     assert IPRange('fe80::1', 'fe80::fffe') in IPRange('fe80::', 'fe80::ffff:ffff:ffff:ffff')
     assert IPRange('192.0.2.5', '192.0.2.10') not in IPRange('::', '::255.255.255.255')
 
+    # Reported in https://github.com/netaddr/netaddr/issues/157
+    net = IPNetwork('10.0.0.0/30')
+    assert net in IPRange(net.first, net.last)
+
 
 def test_more_iprange_sorting():
     ipranges = (
